--- a/templates/guimain.html.twig
+++ b/templates/guimain.html.twig
@@ -3,13 +3,14 @@
 {## guimain.html.twig                             (c) Wolfram Plettscher 01/2021 ##}
 {##                                                                              ##}
 {##################################################################################}
-{#% extends 'skeleton.html.twig' %#}
+{% extends 'skeleton.html.twig' %}
 
 {##################################################################################}
 {#                                                                                #}
 {# header                                                                         #}
 {#                                                                                #}
 {##################################################################################}
+{#
 {% block header %}
 
 {% endblock %} {# of header #}
