--- a/templates/guimain.html.twig
+++ b/templates/guimain.html.twig
@@ -7,22 +7,15 @@
 
 {##################################################################################}
 {#                                                                                #}
-{# header                                                                         #}
-{#                                                                                #}
-{##################################################################################}
-{#
-{% block header %}
-
-{% endblock %} {# of header #}
-
-{##################################################################################}
-{#                                                                                #}
 {# contentbody                                                                    #}
 {#                                                                                #}
 {##################################################################################}
 {% block contentbody %}
 
-<h1>M2M Microservice</h1>
+<h1>Microservice replacing Monolith functionality (demonstration)</h1>
+<h3>Return input String back to Lambda-Agent ... and finally into Monolith</h3>
+https://ms1.tsys.koeln or temporarily http://m2m.tsys.koeln/gui <br>
+
 Stay tuned: we will provide a more sophisticated GUI soon.
 
 {% endblock %} {# of contentbody #}
