--- a/templates/guimain.html.twig
+++ b/templates/guimain.html.twig
@@ -16,6 +16,10 @@
 <h3>Return input String back to Lambda-Agent ... and finally into Monolith</h3>
 https://ms1.tsys.koeln or temporarily http://m2m.tsys.koeln/gui <br>
 
-Stay tuned: we will provide a more sophisticated GUI soon.
+<table>
+  <tr>
+    <td> {{ form_widget (form.submit, {'attr': {'class': 'css_btn_class'}}) }} </td>
+  </tr>
+</table>
 
 {% endblock %} {# of contentbody #}
