--- a/templates/skeleton.html.twig
+++ b/templates/skeleton.html.twig
@@ -81,7 +81,7 @@
 
           <div id='screenonly'>
             <table width="1220px"><tr>
-              <td width='400px' align="left" ><b>Strategic Bets: Monolith to Microservices</b></td>
+              <td width='400px' align="left" ><b>FITT - Future IT Transformation Suite: Monolith to Microservices</b></td>
         {#
               <td align="center" ><b> {{ app.session.get ('company') }} </b></td>
               <td width='400px' align="right" ><b>Welcome {{ app.session.get('username') }} </b></td>
