--- a/templates/skeleton.html.twig
+++ b/templates/skeleton.html.twig
@@ -81,7 +81,7 @@
 
           <div id='screenonly'>
             <table width="1220px"><tr>
-              <td width='400px' align="left" ><b>FITT - Future IT Transformation Suite: Monolith to Microservices</b></td>
+              <td width='400px' align="left" ><h3>FITT - Future IT Transformation Suite: Monolith to Microservices</h3></td>
         {#
               <td align="center" ><b> {{ app.session.get ('company') }} </b></td>
               <td width='400px' align="right" ><b>Welcome {{ app.session.get('username') }} </b></td>
@@ -129,14 +129,11 @@
     <div id="kicker">
       {% block kicker %}
 
-      {#
         {% if app.session.get ('kickertype') == "error" %}
           <p class='kickererror'>
         {% else %}
           <p class='kickerinfo'>
         {% endif %}
-
-      #}
         {# <?php echo $_SESSION['kicker']; ?> #}
       {#
         {{ app.session.get('kicker') }}
