--- a/templates/guimain.html.twig
+++ b/templates/guimain.html.twig
@@ -13,6 +13,9 @@
 {% block contentbody %}
 
 <h1>Microservice replacing Monolith functionality (demonstration)</h1>
+ 
+<img src="{{ asset('/images/m2mflow.png') }}" alt="Microservice Flow">
+</br></br>
 
 {{ form_start (form) }}
 
